relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-33.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@urlauth:remove|https://username:password@example.com/": {
    "type": "string",
    "value": "https://@example.com/"
  },
  "_meta": {
    "@urlauth:remove|https://username:password@example.com/": {
      "value": {
        "": {
          "rem": [
            [
              "@urlauth:remove",
              "x",
              8,
              8
            ]
          ],
          "len": 38
        }
      }
    }
  }
}
