relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-34.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@urlauth:mask|https://username:password@example.com/": {
    "type": "string",
    "value": "https://*****************@example.com/"
  },
  "_meta": {
    "@urlauth:mask|https://username:password@example.com/": {
      "value": {
        "": {
          "rem": [
            [
              "@urlauth:mask",
              "m",
              8,
              25
            ]
          ],
          "len": 38
        }
      }
    }
  }
}
