relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-37.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@usssn:remove|078-05-1120": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@usssn:remove|078-05-1120": {
      "value": {
        "": {
          "rem": [
            [
              "@usssn:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
