relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-38.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@usssn:mask|078-05-1120": {
    "type": "string",
    "value": "***********"
  },
  "_meta": {
    "@usssn:mask|078-05-1120": {
      "value": {
        "": {
          "rem": [
            [
              "@usssn:mask",
              "m",
              0,
              11
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
