relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-39.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@userpath|/Users/john/Documents": {
    "type": "string",
    "value": "/Users/[user]/Documents"
  },
  "_meta": {
    "@userpath|/Users/john/Documents": {
      "value": {
        "": {
          "rem": [
            [
              "@userpath",
              "s",
              7,
              13
            ]
          ],
          "len": 21
        }
      }
    }
  }
}
