relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-41.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@userpath:remove|/Users/john/Documents": {
    "type": "string",
    "value": "/Users//Documents"
  },
  "_meta": {
    "@userpath:remove|/Users/john/Documents": {
      "value": {
        "": {
          "rem": [
            [
              "@userpath:remove",
              "x",
              7,
              7
            ]
          ],
          "len": 21
        }
      }
    }
  }
}
