relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-42.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@userpath:mask|/Users/john/Documents": {
    "type": "string",
    "value": "/Users/****/Documents"
  },
  "_meta": {
    "@userpath:mask|/Users/john/Documents": {
      "value": {
        "": {
          "rem": [
            [
              "@userpath:mask",
              "m",
              7,
              11
            ]
          ],
          "len": 21
        }
      }
    }
  }
}
